[tool.poetry]
name = "python-web-5"
version = "0.1.0"
description = ""
authors = ["RuslanStoliar <111749578+RuslanStoliar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_web_5"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
